--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\_Scripts\TestScript.cs" />
+    <Compile Include="Assets\_Scripts\MovingGround.cs" />
+    <Compile Include="Assets\_Scripts\Player.cs" />
+    <Compile Include="Assets\_Scripts\ScrollBackground.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>/mnt/FastData/Blended Learning/2018-SUMMER/AdvancedGame 2D/MOB401_Assignment/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
